[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poem = "3.1.12"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
store = {  path = "../store"}
tokio = { version ="1.49.0", features = ["full"]} 
serde_json = "1.0.149"
bcrypt = "0.19.0"
